# learn-opengl

cpp/: .clang-format  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cpp/cmake/: AddLesson.cmake
cpp/src/common/: CMakeLists.txt  camera.hpp  shader.hpp  utils.cpp  utils.hpp
cpp/src/lessons/01_hello_window/: CMakeLists.txt  main.cpp
cpp/src/lessons/02_hello_triangle/: CMakeLists.txt  main.cpp  main2.cpp
cpp/src/lessons/03_shaders/: 034.shader.vs  035.shader.vs  036.shader.fs  036.shader.vs  CMakeLists.txt  exercise01.cpp  exercise02.cpp  exercise03.cpp  shaders_class.cpp  shaders_interpolation.cpp  shaders_uniform.cpp
cpp/src/lessons/04_textures/: 041_textures.cpp  042.shader.fs  042.shader.vs  042_exercise01.cpp  043.shader.fs  043_exercise02.cpp  044.shader.fs  044_exercise03.cpp  CMakeLists.txt
cpp/src/lessons/05_transformations/: 051.shader.vs  051_transformations.cpp  CMakeLists.txt
cpp/src/lessons/06_coordinates/: 061.shader.vs  061_coordinates.cpp  CMakeLists.txt
cpp/src/lessons/07_camera/: 071_camera.cpp  CMakeLists.txt
cpp/src/lessons/73_breakout/: 71_sprite.vs.glsl  CMakeLists.txt  game.cpp  game.h  main.cpp  resource_manager.cpp  resource_manager.h  sprite_renderer.cpp  sprite_renderer.h  texture.cpp  texture.h
